--- a/styles/scss/layout/_header.scss
+++ b/styles/scss/layout/_header.scss
@@ -7,6 +7,12 @@
 	z-index: 1;
 }
 
+@media (max-width: 1199px) {
+  .header-container-wrapper {
+    position: inherit;
+  }
+}
+
 /**
  * Logo
  */
